--- a/img/pages/contacto.html
+++ b/img/pages/contacto.html
@@ -4,24 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="informacion,tips y curiosidades del mundo de la nutricion">
-    <meta name="keywords" content="informacion, nutricion, datos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Nutricion - Tip</title>
+    <title>Contacto</title>
 </head>
-<body>
-
-    <header class="container-fluid headerMas">
+<body class="hojaContacto">
+    <header class="container-fluid headerContacto">
 
         <!--Menu de navegacion para poder moverme a las demas paginas-->
 
-        <nav class="navbar navbar-dark bg-dark fixed-top row navTienda">
+        <nav class="navbar navbar-dark bg-dark fixed-top row navContacto">
             <div class="container-fluid col-12">
-                <a class="navbar-brand" href="#">MAS..</a>
+                <a class="navbar-brand" href="#">CONTACTO</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -42,13 +38,10 @@
                                 <a class="nav-link active" aria-current="page" href="./productos.html">PRODUCTOS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./contacto.html">CONTACTO</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="./la-tienda.html">LA TIENDA</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Secciones</a>
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">MAS..</a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a class="dropdown-item" href="./mas.html">Tip de la semana</a></li>
                                     <li><hr class="dropdown-divider"></li>
@@ -61,35 +54,42 @@
             </div>
         </nav> 
 
-        <h1 class="h1Mas"> Tip de la semana!</h1>
+
 
     </header>
-    <main class="mainMas">
+    <main class="mainContacto">
 
-        <!-- info/Noticia sobre nutricion a actualizar de manera semanal-->
-
-        <div class="estiloTip">
-            <h2> CAFE VERDE.. ¿Lo Sabias?</h2>
-        </div>
-
-        <div class="imgMas">
-            <img src="../img/cafe-verde.png" alt="granos de cafe verde">
-        </div>
-
-        <div class="listaTip">
-            <ul> 7 Beneficios del café verde:
-                <li> Promueve la pérdida de peso</li>
-                <li> Previene el envejecimiento prematuro y las enfermedades</li>
-                <li> Elimina la celulitis</li>
-                <li> Aumenta la energía y la concentración</li>
-                <li> Reduce la presión arterial</li>
-                <li> Equilibra la glucosa en sangre</li>
-                <li> Favorece la diuresis y desintoxica el organismo</li>
-            </ul>
-        </div>
-
+        <!--Formulario de contacto-->
+        
+        <form class="formulario">
+            <fieldset>
+                <legend> CONTACTO</legend>
+                <div class="form">
+                    <label for="Name"> Nombre Completo</label>
+                    <input type="text" name="name" id="name">
+                </div>
+                <div class="form">
+                    <label for="email"> Email</label>
+                    <input type="email" name="email" id="email">
+                </div>
+                <div class="form">
+                    <label for="Celular"> Celular (opcional)</label>
+                    <input type="number" name="celular" id="celular">
+                </div>
+                <div class="formDistinto">
+                    <label for="Mensaje"> Dejanos tu Mensaje!</label>
+                    <input type="text" name="mensaje" id="mensaje">
+                </div>
+                <div class="formButton">
+                    <input type="submit" value="Enviar Mensaje">
+                    <input type="reset" value="Borrar Todo">
+                </div>
+            </fieldset>
+        </form>
+        
     </main>
-    <footer class="footerStyle">
+
+    <footer class="footerStyleContacto">
 
         <!-- informacion para transacciones y redes sociales-->
         <div class="logoPago">
@@ -114,7 +114,6 @@
 
     </footer> 
 
-    <script src="https://kit.fontawesome.com/bfc30bee4e.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
