--- a/img/pages/la-tienda.html
+++ b/img/pages/la-tienda.html
@@ -4,24 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="informacion,tips y curiosidades del mundo de la nutricion">
-    <meta name="keywords" content="informacion, nutricion, datos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Nutricion - Tip</title>
+    <title>La Tienda</title>
 </head>
 <body>
-
-    <header class="container-fluid headerMas">
+    <header class="container-fluid tienda">
 
         <!--Menu de navegacion para poder moverme a las demas paginas-->
 
         <nav class="navbar navbar-dark bg-dark fixed-top row navTienda">
-            <div class="container-fluid col-12">
-                <a class="navbar-brand" href="#">MAS..</a>
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">LA TIENDA</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -44,11 +41,8 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="./contacto.html">CONTACTO</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./la-tienda.html">LA TIENDA</a>
-                            </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Secciones</a>
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">MAS..</a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a class="dropdown-item" href="./mas.html">Tip de la semana</a></li>
                                     <li><hr class="dropdown-divider"></li>
@@ -61,33 +55,34 @@
             </div>
         </nav> 
 
-        <h1 class="h1Mas"> Tip de la semana!</h1>
+        <div class="h1Tienda">
+            <h1> NUESTRA TIENDA</h1>
+        </div>
 
     </header>
-    <main class="mainMas">
+    <main class="mainLaTienda">
 
-        <!-- info/Noticia sobre nutricion a actualizar de manera semanal-->
-
-        <div class="estiloTip">
-            <h2> CAFE VERDE.. ¿Lo Sabias?</h2>
+        <div class="ubicacion">
+            <img src="../img/ubicacion.jpg" alt="logo de ubicacion">
+            <p> Estamos ubicados en la ciudad de Ricardone, veni a conocernos!</p>   
         </div>
 
-        <div class="imgMas">
-            <img src="../img/cafe-verde.png" alt="granos de cafe verde">
+        <div class="mainLaTienda1">
+            <img class="mapa" src="../img/Tienda.Ubicacion.PNG" alt="mapa de ubicacion">
         </div>
 
-        <div class="listaTip">
-            <ul> 7 Beneficios del café verde:
-                <li> Promueve la pérdida de peso</li>
-                <li> Previene el envejecimiento prematuro y las enfermedades</li>
-                <li> Elimina la celulitis</li>
-                <li> Aumenta la energía y la concentración</li>
-                <li> Reduce la presión arterial</li>
-                <li> Equilibra la glucosa en sangre</li>
-                <li> Favorece la diuresis y desintoxica el organismo</li>
-            </ul>
+        <div class="mainLaTienda2">
+            <div class="tiendaIcon">
+            <i class="fa-solid fa-location-dot"></i><p class="p-icon">Dominguez Regula 166, Ricardone (2201)</p>
+            </div>
+            <div class="tiendaIcon">
+            <i class="fa-solid fa-phone"></i><p class="p-icon">+54 0341 4465207</p>
+            </div>
+            <div class="tiendaIcon">
+            <i class="fa-solid fa-envelope"></i><p class="p-icon">nutriandietetica@gmail.com</p>
+            </div>
         </div>
-
+        
     </main>
     <footer class="footerStyle">
 
@@ -112,7 +107,7 @@
             </div>
         </div>
 
-    </footer> 
+    </footer>
 
     <script src="https://kit.fontawesome.com/bfc30bee4e.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
