--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="hoja de contacto, dejanos tu mensaje">
+    <meta name="keywords" content="contacto, mensaje">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
@@ -15,7 +17,7 @@
 
         <!--Menu de navegacion para poder moverme a las demas paginas-->
 
-        <nav class="navbar navbar-dark bg-dark fixed-top row nav-contacto">
+        <nav class="navbar navbar-dark bg-dark fixed-top row navContacto">
             <div class="container-fluid col-12">
                 <a class="navbar-brand" href="#">CONTACTO</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
