--- a/pages/la-tienda.html
+++ b/pages/la-tienda.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="informacion de la tienda, ubicada en la ciudad de ricardone">
+    <meta name="keywords" content="ubicacion, informacion, datos, tienda">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Logo-Nutrian.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <title>La Tienda</title>
+    <title>Informacion La Tienda</title>
 </head>
 <body>
     <header class="container-fluid tienda">
 
         <!--Menu de navegacion para poder moverme a las demas paginas-->
 
-        <nav class="navbar navbar-dark bg-dark fixed-top row nav-tienda">
+        <nav class="navbar navbar-dark bg-dark fixed-top row navTienda">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">LA TIENDA</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
@@ -73,7 +75,7 @@
 
         <div class="mainLaTienda2">
             <div class="tiendaIcon">
-            <i class="fa-solid fa-location-dot"></i></i><p class="p-icon">Dominguez Regula 166, Ricardone (2201)</p>
+            <i class="fa-solid fa-location-dot"></i><p class="p-icon">Dominguez Regula 166, Ricardone (2201)</p>
             </div>
             <div class="tiendaIcon">
             <i class="fa-solid fa-phone"></i><p class="p-icon">+54 0341 4465207</p>
